--- a/ANKEN/accounts/templates/accounts/login.html
+++ b/ANKEN/accounts/templates/accounts/login.html
@@ -68,6 +68,7 @@ input:focus { box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rgb
 </style></head><body>
 <div class="login">
     <h2>System Integration Section</h2>
+    {% csrf_token %}
     <form method="post">
     	<!--
     	<input type="text" name="u" placeholder="Username" required="required" />
